@@ -1,7 +1,4 @@
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.IOException;
-import java.io.InputStreamReader;
+import java.io.*;
 
 public class JasminCompiler {
     public static void main(String[] args) throws Exception {
@@ -52,7 +49,31 @@ public class JasminCompiler {
             }
         }
 
-        Process javaProcess = Runtime.getRuntime().exec("java -cp src/JasminFiles/JavaClasses MainClass");
+        ProcessBuilder processBuilder = new ProcessBuilder("java", "-cp", "src/JasminFiles/JavaClasses", "MainClass");
+        processBuilder.redirectErrorStream(true); // объединение stdout и stderr
+
+        Process javaProcess = processBuilder.start();
+
+        // Создаем отдельный поток для чтения ввода пользователя и записи в стандартный ввод процесса
+
+
+        Thread inputThread = new Thread(() -> {
+            try {
+                BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(javaProcess.getOutputStream()));
+                BufferedReader userInputReader = new BufferedReader(new InputStreamReader(System.in));
+                String userInput;
+                while ((userInput = userInputReader.readLine()) != null) {
+                    writer.write(userInput);
+                    writer.newLine();
+                    writer.flush();
+                }
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        });
+
+        inputThread.start();
+
 
         // Read the output from the java process
         BufferedReader reader = new BufferedReader(new InputStreamReader(javaProcess.getInputStream()));
@@ -60,5 +81,17 @@ public class JasminCompiler {
         while ((line = reader.readLine()) != null) {
             System.out.println(line);
         }
+        BufferedReader errorReader = new BufferedReader(new InputStreamReader(javaProcess.getErrorStream()));
+        while ((line = errorReader.readLine()) != null) {
+            System.err.println(line);
+        }
+
+
+        inputThread.interrupt();
+        int exitCode = javaProcess.waitFor();
+
+        System.out.println("\nExit Code: " + exitCode);
+        System.exit(exitCode);
+
     }
 }
